--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>hello world</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad earum non,
+      tenetur corporis laudantium officiis dolorem qui doloribus sequi
+      explicabo, eaque molestiae provident architecto excepturi autem quae
+      repellendus. Alias, quidem?
+    </p>
   </body>
 </html>
